Added back in a fix for loading multiple file resources that might be located in a host bundle or it's fragments so that it can be loaded properly.

--- a/xbean-blueprint/pom.xml
+++ b/xbean-blueprint/pom.xml
@@ -29,6 +29,7 @@
         <version>3.13-SNAPSHOT</version>
     </parent>
 
+	<groupId>com.rmoquin.xbean</groupId>
     <artifactId>xbean-blueprint</artifactId>
     <packaging>bundle</packaging>
     <name>Apache XBean :: OSGI Blueprint Namespace Handler</name>
